--- a/poll/templates/poll/base.html
+++ b/poll/templates/poll/base.html
@@ -29,7 +29,7 @@
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav center">
                         <li><a href="{%url 'home'%}">Home</a></li>
                         <li><a href="{%url 'create'%}">Create</a></li>
                     </ul>
