changed some styles

--- a/poll/static/style.css
+++ b/poll/static/style.css
@@ -47,7 +47,8 @@
 }
 .list-group-item{
   font-size: large;
-  padding: auto;
+  padding top: 15px;
+  padding bottom: 15px;
 }
 .form-group{
   font-size: medium;
