--- a/poll/templates/poll/home.html
+++ b/poll/templates/poll/home.html
@@ -14,7 +14,7 @@
                 <li class="list-group-item">
                     <strong>{{ poll.question }}</strong>
                     <span class="pull-right">
-                        <a href="{% url 'vote' poll.id%}" class="btn btn-info">Vote</a> &nbsp;
+                        <a href="{% url 'vote' poll.id%}" class="btn btn-info btn-small">Vote</a> &nbsp;
                         <a href="{% url 'results' poll.id%}" class="btn btn-default">View Results</a> &nbsp;
                     </span>
                 </li>
