--- a/poll/static/style.css
+++ b/poll/static/style.css
@@ -1,6 +1,3 @@
-.body{
-  background-color: #4155;
-}
 .navbar {
    margin-bottom: 0;
    color: rgba(22, 143, 173, 0.333);
@@ -53,4 +50,46 @@
 }
 .form-group{
   font-size: medium;
+}
+
+.bg{
+  background-color: rgba(232, 219, 233, 0.623);
+}
+.btn{
+  display: inline-block;
+  background-color: #9b24e0;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 15px 32px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 2px;
+
+}
+.right {
+  position: absolute;
+  right: 0px;
+  width: 300px;
+  font-size: 20px;
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+  font-size: x-large;
+}
+
+.btn:hover span {
+  padding-right: 25px;
+}
+
+.btn:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+.btn span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
 }
