--- a/poll/templates/poll/home.html
+++ b/poll/templates/poll/home.html
@@ -3,7 +3,7 @@
 {% block title %}Homepage{% endblock %}
 
 {% block main %}
-<div class="row">
+<div class="row lg">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">Available Polls</h3>
