Added some styles

--- a/poll/templates/poll/base.html
+++ b/poll/templates/poll/base.html
@@ -37,6 +37,6 @@
             </div>
         </nav>
 
-        <div class="container bg">
+        <div class="bg container">
             {% block main %}{% endblock %}
         </div>
