--- a/poll/static/style.css
+++ b/poll/static/style.css
@@ -17,8 +17,8 @@
    color: #48205a !important;
  }
  .logo {
-    font-size: 40px;
-   font-weight: 30px;
+    font-size: 60px;
+   font-weight: bolder;
    font-family: fantasy;
 }
 .panel-default > .panel-heading {
